refactor and begin auth work
